2011-07-06  Mike Frysinger  <vapier@gentoo.org>

  * src/flash/intel.c: Add support for 28F256P33 flashes by Jonathan Stroud.

2011-07-06  Jie Zhang  <jie.zhang@analog.com>

  * src/tap/chain.c (urj_tap_chain_connect): Correct checking of the
    parameter number of parallel cable.

2011-07-04  Mike Frysinger  <vapier@gentoo.org>

  * src/bus/arm9tdmi.c, src/bus/ejtag_dma.c, src/bus/ixp435.c,
    src/bus/mpc837x.c, src/bus/sharc21369_ezkit.c: Fix coding style.

2011-07-03  Mike Frysinger  <vapier@gentoo.org>

  * include/urjtag/bfin.h (bfin_part_data.emu_oab): Constify.
    (bfin_emu_oab): Delete external decl.
  * src/bfin/bfin-part-bfin.c (bfin_emu_oab): Constify & localize.
  * src/bfin/bfin.c (bfin_emu_wait_ts): Constify.

  * src/bus/mpc824x.c (BUS_WIDTH, REVBITS, dbgAddr, dbgData): Push
    global data down into bus-specific params data.

  * src/bus/pxa2x0.c: Constify default map info, and then push writable
    global map data into the bus-specific params data.

  * include/urjtag/bfin.h: Unify bfin_part_data casts into a single macro.

2011-07-01  Jie Zhang  <jie.zhang@analog.com>

  * src/lib/ansidecl.h: Move to include.
  * src/lib/filenames.h: Likewise.
  * src/lib/libiberty.h: Likewise.
  * src/lib/safe-ctype.h: Likewise.
  * src/lib/hex.c: Import from GCC.
  * src/lib/Makefile.am (libiberty_sources): Remove ansidecl.h,
    filenames.h, libiberty.h and  save-ctype.h.
    (libjtaglib_la_SOURCES): Add hex.c.
  * include/Makefile.am: New file.
  * Makefile.am (SUBDIRS): Add include.
  * src/global/data_dir.c (make_relative_prefix): Don't declare.
    Include libiberty.h.

  * src/lib/hex.c (hex_init): Avoid redundant initialization.

2011-06-30  Mike Frysinger  <vapier@gentoo.org>

  * cmd/cmd_initbus.c (cmd_initbus_complete): Complete bus parameters too.

  * include/urjtag/cable.h, src/tap/cable.c (urj_tap_cable_find): Add new
    helper for looking up cable drivers by name.
  * src/cmd/cmd_cable.c (cmd_cable_run): Use new helper to restore cable