@@ -29,16 +29,10 @@
 #include <stdlib.h>
 #include <string.h>
 
-#ifdef HAVE_LIBREADLINE
-#include <readline/readline.h>
-#endif
-
 #include <urjtag/error.h>
 #include <urjtag/parse.h>
-#include <urjtag/jtag.h>
 
 #include <urjtag/cmd.h>
-#include <urjtag/bsdl.h>
 
 #include "cmd.h"
 
@@ -106,43 +100,7 @@ cmd_include_complete (urj_chain_t *chain, char ***matches, size_t *match_cnt,
                       char * const *tokens, const char *text, size_t text_len,
                       size_t token_point)
 {
-#ifdef HAVE_LIBREADLINE
-    int state;
-    size_t implicit_len;
-    char *match, *search_text;
-
-    /* Use the search path if path isn't explicitly relative/absolute */
-    if (text[0] != '/' && text[0] != '.')
-    {
-        const char *jtag_data_dir = urj_get_data_dir ();
-        implicit_len = strlen (jtag_data_dir) + 1;
-
-        search_text = malloc (implicit_len + text_len + 1);
-        if (!search_text)
-            return;
-
-        sprintf (search_text, "%s/%s", jtag_data_dir, text);
-        text = search_text;
-        text_len += implicit_len;
-    }
-    else
-    {
-        implicit_len = 0;
-        search_text = NULL;
-    }
-
-    state = 0;
-    while (1)
-    {
-        match = rl_filename_completion_function (text, state++);
-        if (!match)
-            break;
-        urj_completion_add_match_dupe (matches, match_cnt, match + implicit_len);
-        free (match);
-    }
-
-    free (search_text);
-#endif
+    urj_completion_mayben_add_file (matches, match_cnt, text, text_len, true);
 }
 
 const urj_cmd_t urj_cmd_include = {
